[package]
name = "lifecrypt"
version = "0.1.0"
authors = ["Clark Gaebel", "Elijah Andrews"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
base64 = "^0.13"
mktemp = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
os_type = "^2.2"
rpassword = "^5.0"
rust-crypto = "^0.2"
subprocess = "^0.2"
scrypt = "^0.5"
structopt = "^0.3"
rand = "^0.7"
lazy_static = "^1.4"